--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -19,8 +19,7 @@
 
 在阐述了研究问题的实际应用意义以及在技术方案方面的可行性与挑战之外，我们还分析了数据资源可行性以及计算资源可行性。本课题是与一家国内知名在线票务服务商的合作项目，研究使用的数据是经该公司授权、用户脱敏的机票原始订单，我们在严格保证数据机密的条件下，可以对数据进行手机、采样、分析等操作。此外，目前已有很多开放使用的数据分析工具如R，Python第三方工具包等，可以用于单机进行少量数据的处理与分析；还有包括Hive，Spark等分布式数据仓库和计算框架等工具，可以用于算法的大规模并行计算与生产环境线上部署。
 
-结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票服务的数据预处理、分析与推荐算法模型，根据用户的历史订单和用户搜索、筛选等行为，建立用户画像并分析用户的偏好。结合机票的特征内容，为用户准确、高效地产生推荐合适的机票。此外，本文还结合了其他相关领域的技术方案，对一些细粒度的场景提出了更具针对性的推荐策略，以进一步提升机票推荐效果。
-
+结合研究问题的实际应用意义以及各方面的可行性，本文对如何为用户进行机票方案的个性化推荐展开研究。论文主要提出一套契合在线机票服务的数据预处理、分析与推荐算法模型，根据用户的历史订单数据建立用户的偏好模型。结合机票的特征内容，为用户准确、高效地产生推荐合适的机票。此外，本文还结合了其他相关领域的技术方案，对一些细粒度的场景提出了更具针对性的推荐策略，以进一步提升机票推荐效果。
 
 \section{国内外研究现状}
 \subsection{机票个性化推荐的研究现状}
@@ -78,7 +77,7 @@
 
 
 \subsection{文章结构安排}
-本文共七个章节，文章节安排如下：
+本文共七个章节，文章结构安排如下：
 
 第一张绪论，从业务应用场景分析了研究问题的应用意义及遇到的挑战。并从概括性的系统角度对研究内容的各方面可行性进行分析。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
 
@@ -86,11 +85,11 @@
 
 第三章机票数据介绍及基于特征分布的推荐算法。首先介绍了研究使用的数据，并结合业务经验知识提取机票数据中的重要特征。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。其后，构建了用户特征分布模型，根据衡量信息丰富度的熵值理论计算了用户对每个特征的偏重程度，组成完整的个性化机票推荐方法。在实验阶段，我们提取了一些热门航线，分析用户和订单的分布，进行机票推荐实验，并与两种基础的推荐策略进行了对比。在后续章节中，我们以此方法作为基线推荐算法，细化应用场景，深入研究，进一步提升个性化机票推荐的准确率。
 
-第四章机票推荐中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐场景中的冷启动问题。我们首先研究了航线冷启动问题，即用户在目标航线上的训练订单数量不足，而在别的航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线间的相似度，选出最优相似航线。得到用户修正混合模型。其后，我们研究了用户冷启动，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
+第四章机票推荐中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐场景中的冷启动问题。我们首先研究了航线冷启动问题，即用户在目标航线上的训练订单数量不足，而在别的航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线间的相似度，选出最优相似航线，得到用户修正混合模型。其后，我们研究了用户冷启动问题，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
 
-第五章结合共享账户的机票推荐算法。本章我们研究了账户中的乘客共享账户问题。在可以获取乘客个人身份信息的前提下，将作者-主题模型应用到乘客预测中。首先预定义特征词库，每条订单都使用词汇的集合表示。在模型训练过程中，账户下的所有订单可以视作一个语料库，每条订单视作一个文档，并将乘客视为作者。完成模型训练后，就当前会话的上下文信息计算出乘客预测概率分布。并将乘客预测结合到机票推荐过程中。
+第五章结合共享账户的机票推荐算法。本章我们研究了账户中的乘客共享账户问题。在可以获取乘客身份信息的前提下，将作者-主题模型应用到乘客预测中。首先预定义特征词库，每条订单都使用词汇的集合表示。在模型训练过程中，每个账户下的订单视作一个语料库，每条订单视作一个文档，并将乘客视为作者。完成模型训练后，就当前会话的上下文信息计算出乘客预测概率分布。并将乘客预测结合到机票推荐过程中。
 在实验阶段，我们对乘客预测准确率和结合乘客预测的机票推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
 
-第六章结合隐性特征的机票推荐算法。研究了用户在不同起飞日期的行为变化对个性化机票推荐准确率带来的影响。发现基于显性特征的用户特征分布模型无法反映用户行为变化。我们为机票特征添加了起飞时间类型，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。定义了模型的目标函数，并使用基于偏好排序的抽样方法进行梯度下降参数训练。我们对该模型的推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
+第六章结合隐性特征的机票推荐算法。研究了用户在不同起飞日期的行为变化对个性化机票推荐准确率带来的影响。而基于显性特征的用户偏好模型无法反映用户行为变化。我们为机票特征添加了起飞时间类型，并建立了转换矩阵将用户模型和机票内容映射到隐性空间。定义了模型的目标函数，并使用基于偏好排序的抽样方法进行梯度下降参数训练。我们对该模型的推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
 
 第七章全文总结及展望。总结了论文的主要研究内容及完成的工作，提出了当前研究中的不足，并提出了未来的深入研究方向及展望。
