--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -7,23 +7,19 @@
 根据实验结果评估推荐算法的效果。本章的算法作为一个基线算法，是后续章节算法改进的基础与对照。
 
 \section{数据来源及描述}
-本论文研究工作使用的数据由国内知名的在线票务服务商提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
-表格的前两项分别标识了唯一的订单以及对应的订票用户；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；舱位等级主要包括头等舱，商务舱和经济舱三个大类；飞机型号包含了飞机的大小等特征。
 
-\begin{table}[!hpb]
+本论文研究工作使用的数据由国内知名的在线票务服务商提供。数据以表的格式组织，每条数据为一张机票订单。原始数据记录中的主要字段如表\ref{tab:fields}所示。
+表格的前两项分别标识航班所属的航线；由于国内部分城市有两个或更多个机场，所以需要标注航班的起飞机场和到达机场；舱位等级主要包括头等舱，商务舱和经济舱三个大类；飞机型号包含了飞机的大小等特征。
+\begin{table}[!h]
   \centering
   \bicaption[tab:fields]{字段介绍}{原始机票订单数据的字段}{Table}{Fields of 
   Flight Data}
   \begin{tabular}{|c|c|} \hline 
     字段名称 & 字段描述\\ \hline
-    Order Id & 订单ID \\ \hline
-    User Id &  账户ID \\ \hline
-    Order Date & 用户订票日期 \\ \hline
-    Order Time & 用户订票时间 \\ \hline
-    Takeoff Date & 起飞日期 \\ \hline
-    Takeoff Time & 起飞时间 \\ \hline
     Origin City & 起飞城市 \\ \hline
     Destination City & 落地城市 \\ \hline
+    Takeoff Date & 起飞日期 \\ \hline
+    Takeoff Time & 起飞时间 \\ \hline
     Airline & 航班所属航空公司 \\ \hline
     Origin Port & 起飞机场 \\ \hline
     Destination Port & 到达机场 \\ \hline
@@ -35,9 +31,7 @@
   \end{tabular}
 \end{table}
 
-表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品；
-也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。
-此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化的机票推荐的流程相当于将这数百项候选机票针对用户的特征模型进行重新排序，最终按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行特征建模。
+表格中的字段表明了机票数据高度结构化的特性。机票数据的属性与书籍、电影、音乐等物品的属性不同。后者的属性通常仅作为物品分类的依据，不能直接反映物品本身的内容。而机票数据的属性则可以代表机票本身的内容，进而直接影响用户的购买决策。另外，不同于上述物品固定的静态属性，机票的价格属于动态属性，即使对于相同航班的同一等级的舱位，其票价在起飞前会发生持续变动，并且变动的幅度很大。而价格作为机票内容中相当重要的一项，会在很大程度上影响用户的选择。因此，即使两张机票具有相同的的航班号和舱位等级，如果它们的价格不同，我们也不能将其当作同一个物品；也难以直接使用以 User-Item 矩阵表示的协同过滤类型的方法进行机票推荐。根据机票数据具备的上述特性，我们主要使用基于内容的方法进行机票推荐。此外，用户搜索时产出的候选机票数量约为一百左右，远低于传统推荐系统中成千上万的物品数量，但是每项候选机票都算作一个新的物品。个性化的机票推荐的流程相当于将这数百项候选机票针对用户的特征模型进行重新排序，最终按照排序后的结果向用户展示。因此，我们首先需要为每位用户进行特征建模。
 
 \section{用户特征分布模型}
 
@@ -137,7 +131,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 \end{algorithm}
 
 
-\begin{algorithm}
+\begin{algorithm}[!h]
 \caption{用户特征分布模型}
 \label{algo:pref_cal}
 \begin{algorithmic}[1]
@@ -154,15 +148,12 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 \State $D[f][order_f] += 1$;
 \EndFor	
 \EndFor 
-\State \Return $D$;
-\EndFunction
 
-\Function {getWeight}{$D$}
 \State $W \gets \emptyset$
 \For{$d_f \in D$}
 \State $W_f \gets \frac{\ln |d_f| - S(\mathbf{d_f})}{\sum_{f \in F}(\ln |f| - S(\mathbf{f}))}$
 \EndFor
-\State \Return $W$
+\State \Return $D,W$;
 \EndFunction
 
 \end{algorithmic}
@@ -183,7 +174,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 \subsection{数据分布与统计}
 本节我们对推荐结果进行验证与分析。我们使用2013年1月至2015年7月的国内机票订单数据进行实验。该数据集包含了国内全部航线的直飞机票订单。有些航线如北京-上海较为热门，每天有大量旅客往返。航班也很密集；而大部分航线的航班数量都不是很多，属于非热门航班。机票订单数据呈长尾分布。考虑到机票推荐算法的实际应用场景，我们这里多采用较热门的航线，因为只有这类航线才有较多的候选机票列表。
 
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \subfigure[航线订单数量图]{
  \label{fig:total_order}
@@ -197,7 +188,7 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 我们选取了北京到上海(BJS-SHA)，北京到成都(BJS-CTU)，北京到深圳(BJS-SZX)，北京到西安(BJS-XIY)这四条航线作为测试航线。图\ref{fig:total_order}为测试航线的航班数量分布图，其横轴分别代表四条航线，纵轴代表对应航线上航班总量（单位：千条）。
 图\ref{fig:total_user}为测试航线上用户数量分布图，其纵轴代表对应航线上用户总数（单位：千人）。通过上面两图我们可以发现，这四条航线的订单数量和乘客数量都很大，在国内具有很高的热门度。其中北京到上海这条航线的热门程度最高，其订单数量和用户数量都远多于其他三条。其中北京到上海和北京到深圳这两条航线的订单、用户数量比达到$2.0$以上；北京到成都和北京到西安的订单、用户数量比只有$1.6$左右，表明后两条航线上的新用户数量远多于前者。我们认为这可以在一定程度上反应城市的性质。往返于北京-上海和北京-深圳的旅客可能更多是出于商务办公目的，因此会造成多次往返的行为；而往返于北京-成都和北京-西安的旅客则更可能是出于休闲旅游目的。
 
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \subfigure[用户数量百分比]{
  \label{fig:user_user_percent}
@@ -208,7 +199,8 @@ $F$为机票的特征集合，$W(f)$为目标用户在特征$f$上的权重，$f
 \bicaption[fig:total]{分布统计}{北京-上海订单、用户分布统计}{Fig}{Figure for Data Statistic in Test Alrlines}
 \end{figure}
 
-我们针对北京-上海航线做了详细的数据分布统计。图\ref{fig:user_user_percent}展示了该航线的用户订单数与用户数量的分布关系，其横轴代表数据集用户的订单数，纵轴代表当前用户数占总用户总数的百分比。结合图表，其含义是订单数量不超过1单的用户占用户总数量的$61\%$；订单数量不超过2单的用户占总量的80\%；99\%以上的用户订单数量在10以下。图\ref{fig:user_order_percent}展示了该航线用户订单数与订单总数量之间的分布关系，其纵轴代表当前订单数占订单总数的百分比。虽然订单数为1单的用户占总用户数的$61\%$，但仅占了$25\%$的订单；订单数量不超过$15\%$的用户占了总订单量的$85\%$。订单数量过多的用户很可能是旅行社代理、部门秘书等代订用户，这部分用户通常为多个乘机人订票，因此从他们的历史订单学习到的偏好几乎不具有代表性，并且代订用户的出行往往有极强的计划性，因此为其进行推荐的效果有限。结合用户数量和订单的分布情况，我们将订单数量多于15的用户从实验数据集中剔除；由于没有测试数据，订单数量为1单的用户也不能用于实验。
+我们针对北京-上海航线做了详细的数据分布统计。图\ref{fig:user_user_percent}展示了该航线的用户订单数与用户数量的分布关系，其横轴代表数据集用户的订单数，纵轴代表当前用户数占总用户总数的百分比。结合图表，其含义是订单数量不超过一单的用户占用户总数量的$61\%$；订单数量不超过两单的用户占总量的$80\%$；$99\%$以上的用户订单数量在$10$以下。图\ref{fig:user_order_percent}展示了该航线用户订单数与订单总数量之间的分布关系，其纵轴代表当前订单数占订单总数的百分比。虽然订单数为1单的用户占总用户数的$61\%$，但仅占了$25\%$的订单；订单数量不超过$15\%$的用户占了总订单量的$85\%$。订单数量过多的用户很可能是旅行社代理、部门秘书等代订用户，这部分用户通常为多个乘机人订票，因此从他们的历史订单学习到的偏好几乎不具有代表性，并且代订用户的出行往往有极强的计划性，因此为其进行推荐的效果有限。结合用户数量和订单的分布情况，我们将订单数量多于$15$的用户从实验数据集中剔除；
+由于没有测试数据，订单数量为一单的用户也不能用于实验。
 
 此处还有一个问题，因为数据集仅有用户选购的机票，并且机票具备较强的实时性和波动性，我们无法恢复用户订票时的候选机票列表。一个可行的办法是使用相同出发日期、相同航线的所有用户订单构建候选机票列表。列表中每项机票之间以航班号、舱位等级、价格加以区分。在热门程度较高的航线上，由于用户量、订单量都十分巨大，我们可以假设全量用户订单对即时搜索结果的覆盖率很高。
 
@@ -225,7 +217,7 @@ A_{rec}(T) =
 \end{cases}
 \end{equation}
 
-$T_{index}$是测试数据集中用户实际选购的机票在我们排序后的列表中的排位$[1,|C|]$，实际排位越靠前，则index的值越小；由评价公式可以得出：如果测试机票排在第1位，则准确率为1；如果排在最后一位，则准确率为0。推荐效果准确率的计算还和候选机票的数量有关：对于两个长度不等的候选机票集合，如果测试机票在其中具有相同的排位，则在集合较长的集合中具有较高的准确率，这也符合业务场景的要求。此外，如果集合中存在与测试机票评分相同的其他候选机票，我们统一将测试机票排在这些机票的最后。
+$T_{index}$是测试数据集中用户实际选购的机票在我们排序后的列表中的排位，其取值范围是$[1,|C|]$，实际排位越靠前，则$T_{index}$越小；由评价公式可以得出：如果测试机票排在第一位，则准确率为$1.0$；如果排在最后一位，则准确率为$0$。推荐效果准确率的计算还和候选机票的数量有关：对于两个长度不等的候选机票集合，如果测试机票在其中具有相同的排位，则在集合较长的集合中具有较高的准确率，这也符合业务场景的要求。此外，如果集合中存在与测试机票评分相同的其他候选机票，我们统一将测试机票排在这些机票的最后。
 
 \begin{equation}
 \label{eq:ma}
