--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -7,9 +7,7 @@
 
 \section{机票推荐中的共享账户}
 
-推荐算法总体分为两类，一类是根据用户和物品之间的关系，提出衡量用户相似度以及物品相似度的算法，为用户根据物品或用户之间的相似度提供推荐结果；另一类是基于内容的推荐，物品可以表示为特征的集合（包括显性特征和隐性特征），从用户的物品列表中学习用户对每个特征的偏好。为用户推荐最符合其特征偏好的物品。
-
-以这两类算法为代表的传统推荐系统通常以用户在网站的注册ID（账户）来识别用户，它们一般假定一个用户背后只有一个使用者，即每个用户仅包含一个固定的偏好模型。然而在很多领域，都会发生现实中几个人共同使用一个账户的情景。例如，在购物网站，可能一个家庭共用一个账户，每位家庭成员都可以使用这个账户进行购物；在一般的线旅行票务服务网站，例如机票、酒店、旅游等业务领域，一个账户中也可能会有几个成员，他们可能会为家人、旅伴购票。
+以协同过滤和基于内容推荐两类算法为代表的传统推荐系统通常以用户在网站的注册ID（账户）来识别用户，它们一般假定一个用户背后只有一个使用者，即每个用户仅包含一个固定的偏好模型。然而在很多领域，都会发生现实中几个人共同使用一个账户的情景。例如，在购物网站，可能一个家庭共用一个账户，每位家庭成员都可以使用这个账户进行购物；在一般的线旅行票务服务网站，例如机票、酒店、旅游等业务领域，一个账户中也可能会有几个成员，他们可能会为家人、旅伴购票。
 
 
 第一种情形中，虽然会有几位家庭成员共同使用账户购物，但是服务商无法获取购物者的真实身份信息。而对于第二种情形，如图\ref{fig:fill_id}所示，乘客在订票后会被要求填写身份信息，因此，网站可以获取其真实身份。在机票数据集中，订单包含了每一位乘客的身份信息，包括姓名、性别、年龄、证件号码等。在我们进行数据分析与实验过程中，统一使用加密后的证件号码来代指乘客，既确保了乘客之间无冲突，又保护了乘客隐私。
@@ -20,11 +18,11 @@
  \bicaption[fig:fill_id]{填写乘客信息}{用户在票务网站填写身份信息}{Fig}{Users Fill in Their Identification on Website}
 \end{figure}
 
-通常来说，同一个用户下乘客可能具有较为相似的偏好，但他们之间的差异也不能忽视。如果我们能够利用购票时获取的乘客身份信息为该乘客进行机票推荐，就可以为每位乘客建立特征分布模型，更具针对性的细粒度乘客模型对进一步提升个性化机票推荐准确率可以起到作用。然而，按照业务流程，只有当用户选定机票后才会填写身份信息。在我们进行机票推荐时还无法获取乘客信息。我们需要预测乘客的概率分布。
+通常来说，同一个用户下乘客可能具有较为相似的偏好，但他们之间的差异也不能忽视。如果我们能够利用购票时获取的乘客身份信息为该乘客进行机票推荐，就可以为每位乘客建立特征分布模型，更具针对性的细粒度乘客模型对进一步提升个性化机票推荐准确率可以起到作用。然而，按照业务流程，只有当用户选定机票后才会填写身份信息。在我们进行机票推荐时还无法获取乘客信息。因而，我们需要预测乘客的概率分布。
 
-我们的问题是在共享账户的乘客选购机票时，根据乘客历史行为模式以及当前会话的上下文预测出本次购票的目标乘客。在电子购物网站等无法获得成员真实身份的场景中，为了解决共享账户问题，通常需要设置几个虚拟成员，其中每个成员代表一种偏好模型。虚拟成员的数量可以是固定值，也可以是通过模型计算出的最优值。然而，这类算法通常只分析用户和物品之间的关系，无法利用当前会话中的上下文信息；并且对虚拟成员预测的分布准确率也无法验证。在机票推荐场景中，对乘客的预测准确率是可以进行验证的。
+我们的问题是在共享账户的乘客选购机票时，根据乘客历史行为模式以及当前会话的上下文预测出本次购票的目标乘客。在电子购物网站等无法获得成员真实身份的场景中，为了解决共享账户问题，通常需要设置几个虚拟成员，其中每个成员代表一种偏好模型。虚拟成员的数量可以是固定值，也可以是通过模型计算出的最优值。然而，这类算法通常只分析用户和物品之间的关系，无法利用当前会话中的上下文信息；并且对虚拟成员的预测准确率也无法验证。在机票推荐场景中，对乘客的预测准确率是可以进行验证的。
 
-在机票的乘客预测模型中，我们使用了作者主题模型（ATM）\parencite{rosen2004author,steyvers2004probabilistic,rosen2010learning}来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在原主题的基础上又添加了作者的关系。每个账户独立进行模型训练，可以将每个账户看作一个语料库。账户中出现过的所有乘客看作每位作者，每条机票订单看作一篇文档， 机票中的每个特征以及上下文信息看作预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
+在机票的乘客预测模型中，我们使用了作者主题模型（ATM）\parencite{rosen2004author,steyvers2004probabilistic,rosen2010learning}来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在文章-主题的基础上又添加了作者-主题的关系。每个账户独立进行模型训练，可以将每个账户视为一个语料库。账户中出现过的所有乘客视为每位作者，每条机票订单视为一篇文档， 机票中的每个特征以及上下文信息视为预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
 
 \section{乘客预测模型}
 事实上，主题模型在推荐系统中的应用很广泛。例如，在PLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征。每用户的偏好模型都服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题$Z$，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
@@ -48,7 +46,7 @@ $K$ & 主题数量\\ \hline
 \end{tabular}
 \end{table}
 
-对于一个账户$M$，我们获取其中包含的乘客集合$P$。我们使用矩阵$\Theta$来表示每位乘客的主题分布，这个参数矩阵的维度是$|P| \times K$，$K$代表模型主题的数量。$\Theta$以狄利克雷分布作为先验，该先验的超参数是$\alpha$。矩阵$\Phi$可以表示每个主题在词汇上的分布，该矩阵的维度是$V \times K$。$\Phi$同样以超参数为超参数是$\beta$的狄利克雷分布作为先验。通常情况下，超参数不是通过训练得到的，而是根据多次数据实验的经验总结来赋值。本章中，我们将$\alpha$赋值为$50/K$，将$\beta$赋值为0.01。
+对于一个账户$M$，我们获取其中包含的乘客集合$P$。我们使用矩阵$\Theta$来表示每位乘客的主题分布，这个参数矩阵的维度是$|P| \times K$，$K$代表模型主题的数量。$\Theta$以狄利克雷分布作为先验，该先验的超参数是$\alpha$。矩阵$\Phi$可以表示每个主题在词汇上的分布，该矩阵的维度是$V \times K$。$\Phi$同样以超参数为超参数是$\beta$的狄利克雷分布作为先验。通常情况下，超参数不是通过训练得到的，而是根据多次数据实验的经验总结来赋值。本章中，我们将$\alpha$赋值为$50/K$，将$\beta$赋值为$0.01$。
 
 式\ref{eq:dir}描述了狄利克雷分布。其中，带$\Gamma$函数的那一项是常系数。可以发现，狄利克雷分布与多项式分布具有相同的形式。这两个分布是共轭分布。
 
@@ -75,13 +73,14 @@ $K$ & 主题数量\\ \hline
        \end{enumerate}
 \end{enumerate}
 
-图\ref{fig:pro_graph}展示了作者主题模型的概率图。带阴影的变量是已知变量；其余是未知变量。每个方框代表一个过程，其右下角的数字是这个过程的循环次数。箭头连接线代表了变量间的条件依赖关系。这个图直观、清晰地表现了生成一条订单文档的过程。
 
-\begin{figure}
+\begin{figure}[!h]
  \centering
  \includegraphics[width=0.45\linewidth]{05/2_graph.pdf}
  \bicaption[fig:pro_graph]{模型概率图}{作者主题模型的概率图}{Fig}{Probability Graph for the Author-topic Model}
 \end{figure}
+
+图\ref{fig:pro_graph}展示了作者主题模型的概率图。带阴影的变量是已知变量；其余是未知变量。每个方框代表一个过程，其右下角的数字是这个过程的循环次数。箭头连接线代表了变量间的条件依赖关系。这个图直观、清晰地表现了生成一条订单文档的过程。
 
 \subsection{模型参数推导}
 在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\parencite{george1993variable}等。传统的EM算法可能会陷入局部最优问题，并且这种算法的计算复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
@@ -89,18 +88,20 @@ $K$ & 主题数量\\ \hline
 
 \begin{eqnarray}
 \label{eq:all_pro}
-P(\mathbf{w}_o | \Theta,\Phi,P) & = & \prod_{i=1}^{N_o}P(w_{oi}|\Theta,\Phi,\mathbf{p}_o) 
+P(\mathbf{w}_o | \Theta,\Phi,P) & = & \prod_{i=1}^{N_o}P(w_{oi}|\Theta,\Phi,p_o) 
 \nonumber \\
  & = & \prod_{i=1}^{N_o}\sum_{p=1}^{|P|}\sum_{t=1}^{K}P(w_{oi}|z_{oi}=t,\Phi)
-P(z_{oi}=t|x_{oi}=p,\Theta)P(x_{oi}=p|\mathbf{p}_o) \nonumber \\
+P(z_{oi}=t|x_{oi}=p,\Theta)P(x_{oi}=p|p_o) \nonumber \\
  & = & \prod_{i=1}^{N_o}\frac{1}{|P|}\sum_{p \in p_o}\sum_{t=1}^{K}\phi_{w_{oi}t}\theta_{tp}
 \end{eqnarray}
 
 
 式\ref{eq:all_pro}描述了在参数矩阵$\Theta$，$\Phi$和乘客集合$P$的条件下，生成一条机票订单的概率函数。在这个生成模型中，$P(w_{oi}|z_{oi}=t,\Phi)$是在选定主题的条件下，根据主题-词汇分布矩阵抽取单词的概率。
-$P(z_{oi}=t|x_{oi}=p,\Theta)$是在选定乘客的条件下，根据乘客-主题分布矩阵抽取主题的概率。$P(x_{oi}=p|\mathbf{p}_o)$是乘客集合中以服从均匀分布抽取乘客的概率。这个等式可以看作生成一条订单的似然函数。如果将参数$\Theta$，$\Phi$视为随机变量，我们训练模型的目标就是训练变量，使概率函数具有最大后验分布(MAP, Maximum A Posteriori)。 
+$P(z_{oi}=t|x_{oi}=p,\Theta)$是在选定乘客的条件下，根据乘客-主题分布矩阵抽取主题的概率。$P(x_{oi}=p|p_o)$是乘客集合中以服从均匀分布抽取乘客的概率。这个等式可以看作生成一条订单的似然函数。
+如果将参数$\Theta$，$\Phi$视为随机变量，我们训练模型的目标就是训练变量，
+使概率函数具有最大后验分布(MAP, Maximum A Posteriori)。 
 
-在Gibbs采样的过程中，为了从联合分布$P(\mathbf{z},\mathbf{x}|\alpha,\beta)$中取样，我们需要为每一个单词$w_{di}$赋值一个主题$z_{di}$以及乘客$x_{di}$。在训练过程中，一个账户下的所有单词都会被取样一次。当所有单词都训练过，称为一个训练批次。通常，我们需要将模型训练数个批次。$p(\Theta,\Phi|\mathbf{z},\mathbf{x},\alpha,\beta)$可以根据狄利克雷和多项式分布四共轭分布的性质来计算。为每个单词抽取的乘客、主题可以使用下式进行计算：
+在Gibbs采样的过程中，为了从联合分布$P(\mathbf{z},\mathbf{x}|\alpha,\beta)$中取样，我们需要为每一个单词$w_{di}$赋值一个主题$z_{di}$以及乘客$x_{di}$。在训练过程中，一个账户下的所有单词都会被取样一次。当所有单词都训练过，称为一个训练批次。通常，我们需要将模型训练数个批次。$p(\Theta,\Phi|\mathbf{z},\mathbf{x},\alpha,\beta)$可以根据狄利克雷和多项式分布互成共轭分布的性质来计算。为每个单词抽取的乘客、主题可以使用下式进行计算：
 
 \begin{eqnarray}
 \label{eq:pro_pass_top}
@@ -108,7 +109,7 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 \propto \frac{C_{tp}^{TP}+\alpha}{\sum{t'}C_{t'p}^{TP}+T\alpha}\frac{C_{wt}^{WT}+\beta}{\sum_{w'}C_{w't}^{WT}+W\beta}
 \end{eqnarray}
 
-式\ref{eq:pro_pass_top}代表为订单$o$的第i个单词赋予乘客p和主题t的概率。$C^{WT}$ 是单词-主题分布矩阵，其每行对应一个单词，每列对应一个主题，每个值代表当前单词被赋予当前主题的次数。$C_{wt}$是除了当前单词之外，单词$w$被赋予主题$t$的次数。$C^{TP}$是主题-乘客分布矩阵，其每行对应一个主题，每列对应一个乘客，矩阵中每个值代表对与该乘客在当前主题包含的单词个数。$C_{tp}$代表乘客$p$在主题$t$包含的词汇个数，同样排除了当前单词。我们可以根据抽样的过程对主题-词汇分布参数以及乘客-主题分布参数进行更新：
+式\ref{eq:pro_pass_top}代表为订单$o$的第$i$个单词赋予乘客$p$和主题$t$的概率。$C^{WT}$ 是单词-主题分布矩阵，其每行对应一个单词，每列对应一个主题，每个元素代表当前单词被赋予当前主题的次数。$C_{wt}$是除了当前单词之外，单词$w$被赋予主题$t$的次数。$C^{TP}$是主题-乘客分布矩阵，其每行对应一个主题，每列对应一个乘客，矩阵中每个元素代表该乘客在当前主题包含的单词个数。$C_{tp}$代表乘客$p$在主题$t$包含的词汇个数，同样排除了当前单词。我们可以根据抽样的过程对主题-词汇分布参数以及乘客-主题分布参数进行更新：
 
 \begin{equation}
 \label{eq:es_the}
@@ -120,7 +121,7 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 \phi_{wt} = \frac{C_{wt}^{WT}+\beta}{\sum_{w'}C_{w't}^{WT}+W\beta}
 \end{equation}
 
-式\ref{eq:es_the}和式\ref{eq:es_phi}分别两个参数的更新公式。$\theta_{tp}$是主题t在乘客p上的概率分布；$\phi_{wt}$是单词w在主题t上的概率分布。在每次取样后，
+式\ref{eq:es_the}和式\ref{eq:es_phi}分别两个参数的更新公式。$\theta_{tp}$是主题$t$在乘客$p$上的概率分布；$\phi_{wt}$是单词w在主题t上的概率分布。在每次取样后，
 需要为每条订单更新单词-主题列表$T$以及单词-乘客$P$列表，其中$T[o][i]$代表在订单$o$中第$i$个单词的主题；$P[o][i]$代表在订单$o$中第$i$个单词的作者。因此，在参数推导的过程中，
 我们需存储上文提到的$C^{TP}$和$C^{WT}$两个矩阵，以及每条订单中每个单词的主题和乘客两个列表。
 
@@ -174,7 +175,7 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 
 \subsection{使用ATM模型进行乘客预测}
 
-上一节我们介绍了在机票推荐领域中作者-主题模型的训练过程。我们首先定义一个词库，将账户下所有订单用作训练，并最终得到参数矩阵$\Theta$和$\Phi$。我们的目的是利用ATM模型，预测当前会话中账户下所有乘客购票概率分布。该问题在本质上属于分类问题，我们可以计算出每位乘客的购票概率，按概率将乘客进行排序。排位越靠前的乘客，越可能是本次购票者。
+上一节我们介绍了在机票推荐领域中作者-主题模型的训练过程。我们首先定义一个词库，将账户下所有订单用作训练，并最终得到参数矩阵$\Theta$和$\Phi$。我们的目的是利用ATM模型，预测当前会话中账户下所有乘客购票概率分布。该问题在本质上属于分类问题，我们可以计算出每位乘客的购票概率，按概率将乘客进行排序。
 
 \begin{equation}
 \label{eq:pred_pass}
@@ -208,7 +209,7 @@ p(x=p|o_n,\Theta,\Phi) \propto p(p)\prod_{w \in o_n}\sum_t p(t|w)p(w|t,p)
 	\mathbf{D'} = \sum_{p \in P'} p(x = p|o_n,\Theta,\Phi) * \log |O_p| * \mathbf{D_p}
 \end{equation}
 
-式\ref{eq:dis_com}给出了多乘客的特征分布融合公式。其中$P'$是本次会话预测的参与乘客集合。我们为每位乘客赋予的权重是该乘客的参与概率以及该乘客参与的订单数量取以10为底的对数。得到了融合的特征分布模型后，我们就可以将之用在机票推荐上。
+式\ref{eq:dis_com}给出了多乘客的特征分布融合公式。其中$P'$是本次会话预测的参与乘客集合。我们为每位乘客赋予的权重是该乘客的参与概率以及该乘客参与的订单数量取以$10$为底的对数。得到了融合的特征分布模型后，我们就可以将之用在机票推荐上。
 
 \section{实验结果分析}
 
@@ -217,7 +218,7 @@ p(x=p|o_n,\Theta,\Phi) \propto p(p)\prod_{w \in o_n}\sum_t p(t|w)p(w|t,p)
 \subsection{实验数据集与评价指标}
 
 \subsubsection{实验数据集描述}
-我们的实验数据集是用户在多航线上的机票订单数据。数据以用户ID区分每个账户，以订单ID区分每条订单，以加密后的乘客证件号区分订单中的每位乘客。数据集引入乘客字段后，每个订单ID可能对应多条订单数据副本，每个副本之间唯一的差别就是乘客ID字段。我们取乘客数量在2至5人的网站账户，如果乘客数量过多，这个账户可能是代理账户，并且每位乘客订单比重很小。不适合用于训练乘客预测模型。
+我们的实验数据集是用户在多航线上的机票订单数据。数据以用户ID区分每个账户，以订单ID区分每条订单，以加密后的乘客证件号区分订单中的每位乘客。数据集引入乘客字段后，每个订单ID可能对应多条订单数据副本，每个副本之间唯一的差别就是乘客ID字段。我们取乘客数量在$2$至$5$人的网站账户，如果乘客数量过多，这个账户可能是代理账户，并且每位乘客订单比重很小。不适合用于训练乘客预测模型。
 
 除了从数据仓库中直接拉取的账户训练数据外，我们还生成了一份虚拟账户数据。在一些共享账户推荐问题的研究中会用到虚拟账户数据。一般的做法是将两个或多个账户的数据合并为一个账户。由于账户的偏好模型具有较为明显的差异，在研究中可以将每个真实账户的模型视作虚拟账户中的一个成员。使用这类数据可以充分挖掘共享账户中的特征差异。另外，一般的共享账户问题缺少准确的账户成员信息，无法验证实验结果，而使用虚拟账户数据同时可以作评价实验结果的依据。
 
@@ -231,8 +232,8 @@ p(x=p|o_n,\Theta,\Phi) \propto p(p)\prod_{w \in o_n}\sum_t p(t|w)p(w|t,p)
 Acc(o_i) = \frac{P' \cap A}{\sqrt{|P'| \times |A|}}
 \end{equation}
 
-式\ref{eq:pass_acc}中，$|P'|$是我们预测的乘客列表，$A$是本条订单实际乘客列表，对每条测试数据而言是一个固定值。其中分子项是预测乘客与实际乘客的交集；分母项是预测乘客与实际乘客各自数量的乘积，是一项惩罚项。可以看出，如果预测乘客与实际乘客集合完全相等，则准确率是1；如果预测乘客没有命中任何一位实际乘客，则准确率是0；在预测准确的乘客数量固定的前提下，预测乘客越多，准确率越低。
-
+式\ref{eq:pass_acc}中，$P'$是我们预测的乘客列表; $A$是本条订单实际乘客列表，对每条测试数据而言是一个固定值。其中分子项是预测乘客与实际乘客的交集；分母项是预测乘客与实际乘客各自数量的乘积，是一项惩罚项。可以看出，如果预测乘客与实际乘客集合完全相等，则准确率是$1$；如果预测乘客没有命中任
+何一位实际乘客，则准确率是$0$。在预测准确的乘客数量固定的前提下，预测乘客越多，准确率越低。
 对于机票推荐，我们使用式\ref{eq:a-rec}对每条机票推荐准确率进行评价，
 以及式\ref{eq:ma}对每种模型下所有用户的推荐平均准确率进行评价。除此之外，考虑到实际应用场景。
 我们还增加了$Top-N$评价指标：
@@ -247,7 +248,7 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 
 \subsection{乘客预测准确率}
 本小节我们对乘客预测的准确率进行评价。我们为每个账户训练作者-主题模型，并在测试订单上进行乘客预测。
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \subfigure[真实账户乘客预测准确率]{
  \label{fig:pre_acc_r}
@@ -259,13 +260,13 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 \end{figure}
 
 图\ref{fig:pred_acc}展示了乘客预测的实验结果。其中图\ref{fig:pre_acc_r}是在真实账户数据集的实验结果；图\ref{fig:pre_acc_a}是在虚拟账户数据集的实验结果。
-其中，横轴是主题数量，范围从5到50共10个取值。进行乘客预测的两种方法分别是作者-主题模型（pATM）预测以及随机预测(Rand)。在随机预测中，我们同样取10个随机值。
+其中，横轴是主题数量，范围从$5$到$50$共$10$个取值。进行乘客预测的两种方法分别是作者-主题模型（pATM）预测以及随机预测(Rand)。在随机预测中，我们同样取$10$个随机值。
 
-可以看到，在真实账户数据集中，随机乘客预测的平均准确率在$57\%$左右，而ATM模型的最高预测准确率是$63\%$。在虚拟账户数据集中，随机乘客预测的平均准确率在$50\%$，因为每个虚拟账户只有两位乘客，而我们每次仅选取一位乘客；并且每条订单的乘客数量也是1。而ATM模型的最高预测准确率是$60\%$。可以看到，在真实数据集中的乘客预测准确率略高与虚拟数据集。
+可以看到，在真实账户数据集中，随机乘客预测的平均准确率在$57\%$左右，而ATM模型的最高预测准确率是$63\%$。在虚拟账户数据集中，随机乘客预测的平均准确率在$50\%$，因为每个虚拟账户只有两位乘客，而我们每次仅选取一位乘客；并且每条订单的乘客数量也是$1$。而ATM模型的最高预测准确率是$60\%$。可以看到，在真实数据集中的乘客预测准确率略高与虚拟数据集。
 其原因是预测准确率同时和预测乘客以及实际乘客的数量有关，在不同的数据集上有不同的基准值。而随机算法在一定程度上可以反映出这个基准值。因此我们的主要标准是衡量ATM模型准确率对随机预测算法的提升。
 
-可以看到，在虚拟账户上准确率的提升高于真实帐户。因为虚拟账户的乘客间差异更大，更有利于提取各自的特征。在真实账户数据集，乘客预测的准确率对比与随机预测有所提升。在两个数据集上，预测准确率都与主题的数量相关。当主题数少于15时，预测准确率保持在较高的水平；而随着主题数的增加，准确率有所下降；通过观察训练参数我们发现，过多的主题数会增加参数矩阵的稀疏性，进而影响到预测准确率。在两个数据集上，预测准确率都是在主题数为10的情况下达到最高值，这证明了ATM模型对同构的文档具有较稳定的表现。
-在下一小节机票推荐部分中，我们将乘客预测模型的主题数量固定为10。
+可以看到，在虚拟账户上准确率的提升高于真实帐户。因为虚拟账户的乘客间差异更大，更有利于提取各自的特征。在真实账户数据集，乘客预测的准确率对比与随机预测有所提升。在两个数据集上，预测准确率都与主题的数量相关。当主题数少于$15$时，预测准确率保持在较高的水平；而随着主题数的增加，准确率有所下降；通过观察训练参数我们发现，过多的主题数会增加参数矩阵的稀疏性，进而影响到预测准确率。在两个数据集上，预测准确率都是在主题数为$10$的情况下达到最高值，这证明了ATM模型对同构的文档具有较稳定的表现。
+在下一小节机票推荐部分中，我们将乘客预测模型的主题数量固定为$10$。
 
 
 \subsection{机票推荐准确率}
@@ -283,7 +284,7 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 \end{figure}
 
 图\ref{fig:pred_rec}展示了机票推荐的实验结果。其中图\ref{fig:pre_rec_r}是在真实账户数据集的推荐结果；图\ref{fig:pre_rec_a}是在虚拟账户数据集的实验结果。
-其中，横轴是主题数量。进行机票推荐的两种方法分别是结合乘客预测的推荐(pdPre)以及不使用乘客预测的推荐(Pre)。可以看到，推荐结果随着主题数量的变化有较大的波动。并且其变化趋势与乘客预测准确率较为吻合。当主体数量在10到15时，推荐准确率达到峰值；当主题数量在25到30时，推荐效果反而差于不进行乘客预测的推荐。因为此时进行乘客预测的准确率较低，而无法做出有针对性的乘客模型融合。另外，在虚拟数据集上机票推荐准确率低于真实数据集。因为由不同账户抽取出的乘客偏好会有较大差异。如果将其视作一个账户进行偏好建模，会对推荐结果产生影响。同样，虚拟数据集对推荐效果的提升程度高于真实数据集。由此我们可以得出结论：在较高的乘客预测准确率的保障下，乘客间的差异越大，
+其中，横轴是主题数量。进行机票推荐的两种方法分别是结合乘客预测的推荐(pdPre)以及不使用乘客预测的推荐(Pre)。可以看到，推荐结果随着主题数量的变化有较大的波动。并且其变化趋势与乘客预测准确率较为吻合。当主体数量在10到15时，推荐准确率达到峰值；当主题数量在$25$到$30$以上时，推荐效果反而差于不进行乘客预测的推荐。因为此时进行乘客预测的准确率较低，而无法做出有针对性的乘客模型融合。另外，在虚拟数据集上机票推荐准确率低于真实数据集。因为由不同账户抽取出的乘客偏好会有较大差异。如果将其视作一个账户进行偏好建模，会对推荐结果产生影响。同样，虚拟数据集对推荐效果的提升程度高于真实数据集。由此我们可以得出结论：在较高的乘客预测准确率的保障下，乘客间的差异越大，
 结合乘客预测的机票推荐准确率提升越大。
 
 
@@ -299,7 +300,8 @@ top-N = \frac{\sum_{i=1}^{|M|}|top-N(u_i) \cap O_{u_i}|}{|M|}
 \end{figure}
 
 图\ref{fig:pred_top}展示了机票推荐的实验结果。其中图\ref{fig:pre_top_r}是在真实账户数据集的推荐结果；图\ref{fig:pre_top_a}是在虚拟账户数据集的实验结果。在该实验中，我们将ATM模型的主题数量固定在10。
-其中，横轴是$Top-N$策略中推荐机票的条数。在$Top-N$方法中，我们一并计较了基于低价排序(pRank)和热门程度(hRank)排序的推荐准确率。可以看到，几种基于策略的推荐方法的准确率与基于用户特征分布模型的推荐准确率有较大的差异。并且推荐条数从1到10，结合乘客预测的机票推荐(pdPre)都比不进行乘客预测的机票推荐(Pre)具有更高的准确率。在虚拟数据集上的推荐准确率提升高于真实数据集。
+其中，横轴是$Top-N$策略中推荐机票的条数。在$Top-N$方法中，我们一并计较了第三章中提到的基于低价排序(pRank)和热门程度(hRank)排序的推荐准确率。可以看到，总体上机票推荐准确率与推荐的数量呈正比例关系。几种基于基础业务策略的机票推荐准确率与基于用户特征分布模型的推荐准确率有较大的差异。并且推荐机票数量从$1$到$10$，结合乘客预测的机票推荐(pdPre)都比不进行乘客预测的机票推荐(Pre)具有更高的准确率。同时可以看到，
+在虚拟数据集上的推荐准确率提升高于真实数据集。两种衡量评价指标证实了结合用户预测的机票推荐算法在单一的用户特征分布模型基础上进一步提升机票推荐的准确率。并且账户下乘客的偏好差异越大，对推荐效果提升越明显。
 
 
 \section{本章小结}
