--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -5,7 +5,7 @@
 
 首先，感谢我的硕士导师曹健教授。在我两年来的硕士学习与科研期间，曹老师给予我莫大的帮助。在曹老师的指导下，我选定了研究方向，完成了小论文和毕业论文。在每周的讨论会议中，曹老师密切关注我的研究进展，及时指出我在科研工作上的问题，令我深受启发，少走了很多弯路。曹老师教会我如何以辩证的方法看待问题，如何以认真、务实的态度进行科研与工作。曹老师对我的教诲必将成为我未来人生道路上的宝贵财富。
 
-感谢我实验室的同学们。在加入这个大集体，共同成长的过程中，我们相互支持，相互鼓励。在课程学业与科研工作中都取得了进步，我也从他们的身上学习到了很多优秀的品质。特别感谢冯珊珊师姐和杨芳洲师兄在我的科研工作中为我提供的帮助和建议。
+感谢我实验室的同学们。在这个大集体共同成长的过程中，我们相互支持，相互鼓励。在课程学业与科研工作中都取得了进步，我也从他们的身上学习到了很多优秀的品质。特别感谢冯珊珊师姐和杨芳洲师兄在我的科研工作中为我提供的帮助和建议。
 
 感谢我的父母家人和我的朋友们，正是你们的鼓励与支持，我才能专心学业，也才使我有了不断前进的动力。
 \end{thanks}
