--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,14 +1,14 @@
 %# -*- coding: utf-8-unix -*-
-\title{排版先不管 }
+\title{机票个性化推荐的研究与探索}
 \author{某\quad{}某}
-\advisor{曹健}
-\defenddate{2016年12月17日}
+\advisor{某某}
+\defenddate{2014年12月17日}
 \school{上海交通大学}
 \institute{某某系}
 \studentnumber{0010900990}
 \major{某某专业}
 
-\englishtitle{A Piece of }
+\englishtitle{Research of Personalized Flight Recommendation}
 \englishauthor{\textsc{Mo Mo}}
 \englishadvisor{Prof. \textsc{Mou Mou}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
