--- a/tex/pubreview.tex
+++ b/tex/pubreview.tex
@@ -1,6 +1,5 @@
 %# -*- coding: utf-8-unix -*-
 
 \begin{publications}{99}
-    \item\textsc{第一作者}. {中文核心期刊论文}, 2007.  
-    \item\textsc{第一作者}. {EI国际会议论文}, 2006.
+    \item\textsc{第一作者}. {XXX期刊}, 2007.  
 \end{publications}
