--- a/thesis.tex
+++ b/thesis.tex
@@ -4,8 +4,8 @@
 %%==================================================
 
 % 双面打印
-%\documentclass[master, fontset=none, openright, twoside,review]{sjtuthesis}
-\documentclass[master, fontset=none, openright, twoside,submit,zihao=-4]{sjtuthesis}
+\documentclass[master, fontset=none, openright, twoside,review,zihao=-4]{sjtuthesis}
+%\documentclass[master, fontset=none, openright, twoside,submit,zihao=-4]{sjtuthesis}
 
 % \documentclass[bachelor, fontset=adobe, openany, oneside, submit]{sjtuthesis} 
 % \documentclass[master, adobefonts, review]{sjtuthesis} 
@@ -80,21 +80,23 @@
 \include{tex/04_latent}
 \include{tex/07_summary}
 
-\appendix	% 使用英文字母对附录编号，重新定义附录中的公式、图图表编号样式
-\renewcommand\theequation{\Alph{chapter}--\arabic{equation}}	
+
+%% 参考资料
+\printbibliography[heading=bibintoc]
+
+\appendix % 使用英文字母对附录编号，重新定义附录中的公式、图图表编号样式
+\renewcommand\theequation{\Alph{chapter}--\arabic{equation}}  
 \renewcommand\thefigure{\Alph{chapter}--\arabic{figure}}
 \renewcommand\thetable{\Alph{chapter}--\arabic{table}}
 \renewcommand\thealgorithm{\Alph{chapter}--\arabic{algorithm}}
 
 %% 附录内容，本科学位论文可以用翻译的文献替代。
-\include{tex/app_cjk}
-\include{tex/app_log}
+\include{tex/app_sym}
+\include{tex/app_abb}
 
 
-\backmatter	% 文后无编号部分 
+\backmatter % 文后无编号部分 
 
-%% 参考资料
-\printbibliography[heading=bibintoc]
 
 %% 致谢、发表论文、申请专利、参与项目、简历
 %% 用于盲审的论文需隐去致谢、发表论文、申请专利、参与的项目
@@ -117,7 +119,7 @@
   % 盲审论文中，发表学术论文及参与科研情况等仅以第几作者注明即可，不要出现作者或他人姓名
   \ifsjtu@review\relax
     \include{tex/pubreview}
-    \include{tex/projectsreview}  
+    %\include{tex/projectsreview}  
   \else
     \include{tex/pub}	      %% 发表论文
     %\include{tex/projects}  %% 参与的项目
